--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-leaflet-markercluster": "^3.0.0-rc1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "sanitize-html": "^2.7.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
